[package]
name = "tor_proxy"
version = "0.1.0"
authors = ["Vseslav Dorofeev <v.dorofeev@dunice.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-core = "0.1.3"
futures = "0.1.9"
torproxy = { version = "^0", path = "./torproxy" }
tokio-io = "0.1"
graceful = "0.1.1"
argparse = "0.2.2"
