[package]
name = "torproxy"
version = "0.1.0"
authors = ["Vseslav Dorofeev <v.dorofeev@dunice.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = "0.6.0"
log = "0.4.8"
port_scanner = "0.1.5"
tokio = "0.1"
telnet = "0.1.4"
